local/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-spring-boot
  namespace: hello-spring-boot
spec:
  type: ClusterIP
  selector:
    app: hello-spring-boot
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
